--- a/src/style/home.css
+++ b/src/style/home.css
@@ -34,10 +34,11 @@
   position: absolute;
   top: 60vh;
   text-align: center;
+  margin-left: 7vw;
 }
 
 .posterImg {
-  width: 200px;
+  width: 12vw;
   height: auto;
   display: inline-block;
 }
