--- a/src/style/show.css
+++ b/src/style/show.css
@@ -9,17 +9,21 @@
 
 .showTitle {
   padding: 40vh 0 0 130px;
-  font-size: 40px;
+  font-size: 3vw;
   text-shadow: 3px 4px 3px black;
 }
 
 .showOverview {
   padding: 30px 0 0 130px;
   width: 500px;
-  font-size: 20px;
+  font-size: 1.5vw;
   text-shadow: 3px 4px 3px black;
 }
 
 .NewCommentForm {
-  width: 300px;
+  width: 20vw;
+}
+
+.showPagePoster {
+  width: 25vw;
 }
