--- a/src/style/show.css
+++ b/src/style/show.css
@@ -1,3 +1,4 @@
+/* show container */
 .ShowContainer {
   width: 100%;
   height: 100vh;
@@ -8,22 +9,55 @@
 }
 
 .showTitle {
-  padding: 40vh 0 0 130px;
+  padding: 35vh 0 0 10vw;
   font-size: 3vw;
   text-shadow: 3px 4px 3px black;
 }
 
 .showOverview {
-  padding: 30px 0 0 130px;
-  width: 500px;
+  padding: 3vh 0 0 10vw;
+  width: 38vw;
   font-size: 1.5vw;
   text-shadow: 3px 4px 3px black;
 }
 
-.NewCommentForm {
-  width: 20vw;
+#saveButton {
+  margin: 3vh 0 0 10vw;
+}
+
+/* details container */
+.DetailsContainer {
+  margin: 5vh 10vh 0 10vh !important;
 }
 
 .showPagePoster {
   width: 25vw;
+}
+
+.movieDetails {
+  margin-top: 5vh;
+  font-size: 1.5vw;
+  font-weight: bold;
+  color: #FFDC00;
+}
+
+.detailTitle {
+  font-size: 2.5vw;
+}
+
+.detailSpan {
+  color: white;
+  font-weight: normal;
+}
+
+/* comments */
+
+.comments {
+  margin-top: 7vh;
+  font-size: 1.5vw;
+}
+
+.commentFormCon {
+  width: 20vw;
+  font-size: 1.5vw;
 }
