finished the sign up ONLY  and saving jwt token

--- a/src/sergio-styles/search_page.css
+++ b/src/sergio-styles/search_page.css
@@ -68,6 +68,10 @@
   color: white;
 }
 
+.movie-card-links a {
+    color: white;
+}
+
 .movie-card-details {
     display: grid;
     grid-template-columns: 1fr 1fr;
